fix: scope package name to @tcanaud/product-manager
npm name "product-manager" is taken. Use scoped name per kai convention.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "product-manager",
+  "name": "@tcanaud/product-manager",
   "version": "1.0.0",
   "type": "module",
   "description": "File-based product feedback intake, AI semantic triage, backlog management, and feature promotion pipeline for the kai governance stack.",
