feat: add CLI commands (reindex, move, check, promote, triage)
Merge kai-product implementation into product-manager:
- 5 new CLI subcommands with async fs/promises API
- yaml-parser, scanner, index-writer shared modules
- Merged installer/updater with environment detection and artifact templates
- 52 tests (unit + integration), all passing
- Bump to v1.1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tcanaud/product-manager",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "description": "File-based product feedback intake, AI semantic triage, backlog management, and feature promotion pipeline for the kai governance stack.",
   "bin": {
@@ -24,8 +24,12 @@
   ],
   "author": "Thibaud Canaud",
   "license": "MIT",
+  "scripts": {
+    "test": "node --test tests/**/*.test.js"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tcanaud/product-manager.git"
+    "url": "https://github.com/tcanaud/kai.git",
+    "directory": "packages/product-manager"
   }
 }
